package updates required for dev install and run

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@parity/qr-signer": "0.2.0",
+    "ajv": "^6.5.2",
     "babel-polyfill": "6.26.0",
     "bip39": "2.5.0",
     "bn.js": "4.11.8",
@@ -36,10 +37,10 @@
     "qrcode.react": "0.8.0",
     "query-string": "6.0.0",
     "rc-slider": "8.6.0",
-    "react": "16.3.2",
+    "react": "^16.4.2",
     "react-copy-to-clipboard": "5.0.1",
     "react-datetime": "2.14.0",
-    "react-dom": "16.3.2",
+    "react-dom": "^16.4.2",
     "react-markdown": "3.3.0",
     "react-redux": "5.0.7",
     "react-router-dom": "4.2.2",
@@ -100,12 +101,12 @@
     "express": "4.16.2",
     "file-loader": "1.1.11",
     "friendly-errors-webpack-plugin": "1.6.1",
-    "hard-source-webpack-plugin": "0.6.4",
+    "hard-source-webpack-plugin": "0.7.0-alpha.0",
     "html-webpack-plugin": "3.0.6",
     "husky": "0.14.3",
     "image-webpack-loader": "4.2.0",
     "isomorphic-fetch": "2.2.1",
-    "jest": "22.1.4",
+    "jest": "^23.5.0",
     "klaw-sync": "3.0.2",
     "lint-staged": "7.0.4",
     "mini-css-extract-plugin": "0.4.0",
